--- a/site/ctf.html
+++ b/site/ctf.html
@@ -14,7 +14,7 @@
     <header>
         <nav role="navigation" aria-label="Main navigation">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <img src="img/logo.png" alt="Hackers Guild PGH">
                     <span>Guild Con 2025</span>
                 </a>
@@ -24,12 +24,12 @@
                     <span></span>
                 </button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cfp.html">CFP</a></li>
-                    <li><a href="talks.html">Talks</a></li>
-                    <li><a href="workshops.html">Workshops</a></li>
-                    <li><a href="ctf.html" class="active">CTF</a></li>
-                    <li><a href="sponsors.html">Sponsors</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="cfp">CFP</a></li>
+                    <li><a href="talks">Talks</a></li>
+                    <li><a href="workshops">Workshops</a></li>
+                    <li><a href="ctf" class="active">CTF</a></li>
+                    <li><a href="sponsors">Sponsors</a></li>
                 </ul>
             </div>
         </nav>
@@ -125,7 +125,7 @@
                     <div class="tournament-link" style="text-align: center; margin-top: 2rem; padding: 1.5rem; background: rgba(30, 30, 30, 0.5); border-radius: 8px; border: 1px solid rgba(255, 255, 255, 0.1);">
                         <h3 style="color: var(--neon-pink); margin-bottom: 1rem;">Tournament Day</h3>
                         <p style="margin-bottom: 1rem;">View the live tournament countdown and bracket:</p>
-                        <a href="countdown.html" class="btn btn-secondary">Tournament Bracket</a>
+                        <a href="countdown" class="btn btn-secondary">Tournament Bracket</a>
                         <p class="note" style="margin-top: 1rem; font-style: italic; color: #a8a8a8;">(Bracket available during the conference)</p>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
 
     <footer role="contentinfo">
         <div class="container">
-            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct.html">Code of Conduct</a> | <a href="accessibility.html">Accessibility</a> | <a href="terms.html">Terms</a> | <a href="privacy.html">Privacy</a> | <a href="photo-policy.html">Photo Policy</a></p>
+            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct">Code of Conduct</a> | <a href="accessibility">Accessibility</a> | <a href="terms">Terms</a> | <a href="privacy">Privacy</a> | <a href="photo-policy">Photo Policy</a></p>
             <div class="social-links">
                 <span>Follow us:</span>
                 <a href="https://x.com/hackersguildpgh" title="Twitter"><i class="fab fa-twitter"></i></a>
